--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  webview_flutter: ^3.0.4
   bloc:
-  flutter_bloc:
-  dio:
-  shared_preferences:
+  flutter_bloc: ^8.1.1
+  dio: ^4.0.6
+  shared_preferences: ^2.0.15
 
 
 dev_dependencies:
